--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -247,16 +247,42 @@
    - 예를 들어 바로 위 예제문제에서
      - 그림대신 (x, y)같은 형태들만 주어졌다면? 거꾸로 2차원 좌표에 그려보는 것이 가능했음
    - 항상 성공할 수는 없지만 결정적인 방법을 찾아낼 수도 있습니다.
+   - 7번 전략에 예제가 있습니다.
 6. 수식으로 표현할 수 있을까?
    - 6번은 특이하게 평문을 수식으로 표현해보는 것입니다.
      (다른 전략들은 대부분 알기 쉽게 바꾸는 것과는 반대로)
+   - 7번 전략에 예제가 있습니다.
 7. 문제를 분해할 수 있을까?
    - 주어진 제약조건이 복잡하면 다루기 쉽게 분해해 봅시다.
    - 복잡한 조건 1개를 다루기 쉽게 단순한 여러개의 조건으로 바꾸는 것입니다.
    - 예제
-     - 
-   - 연습문제) 위상정렬 28장
-     ![](images/3.jpg)
+     - 400m 달리기 경주에 N명의 육상 선수들이 참가합니다.
+     - 과거기록을 통해 각 선수의 최고기록(best)과 최저기록(worst)를 알고 있습니다.
+     - 이 때, 아래와 같은 신문기사가 여러개 나왔는데 기사에 오류가 있는지 확인하려면?
+       1. 선수 i는 선수 j에게 반드시 패배함
+       2. 선수 i와 선수 j가 서로 상대에게 이길 가능성이 있음
+   - 해결방법
+     - idea
+       - 5번 전략(그림으로 그려볼 수 있을까?)를 이용해 각 선수의 기록 범위를 시각화합니다.
+         ![](images/3.jpg)
+         - 신문기사 1번에 해당하는 관계 (선수 i는 선수 j에게 반드시 패배함)
+           - 0번 선수 & 2번 선수
+           - 1번 선수 & 2번 선수
+         - 신문기사 2번에 해당하는 관계 (선수 i와 선수 j가 서로 상대에게 이길 가능성이 있음)
+           - 0번 선수 & 1번 선수
+             (두 선수간의 교집합이 있는 경우)
+     - idea
+       - 6번 전략(수식으로 표현할 수 있을까?)를 이용해 수식을 도출합니다.
+         - 이 때, 신문기사 1번 수식과 신문기사 2번 수식을 최대한 같은 형태로 도출합니다.
+         - 그 이유는 동일한 형태의 수식이 만들어지면 위상정렬(28장)을 이용해서 풀 수 있기 때문입니다.
+       - 신문기사 1번에 대한 수식 (선수 i는 선수 j에게 반드시 패배함)
+         - worst[j] < best[i]
+       - 신문기사 2번에 대한 수식 (선수 i와 선수 j가 서로 상대에게 이길 가능성이 있음)
+         - 두 선수의 worst ~ best 에 교집합이 있으면 성립하는 조건입니다.
+         - (best[j] < worst[i]) && (best[i] < worst[j])
+   - 회고
+     - 3가지의 전략이 사용되었으며 게다가 위상정렬까지 염두에 두어야 해결이 가능한 문제입니다.
+     - 그 과정에서 2번째 수식을 1번째 수식으로 분할하게 되었습니다.
 8. 뒤에서부터 생각해서 문제를 풀 수 있을까?
    - 문제를 풀다보면 어떤 순서를 내포하는 것들이 있습니다.
    - 해결방법이 떠오르지 않을 때는 그 순서를 뒤집어 보면 어떨까요?
@@ -294,9 +320,24 @@
 10. 특정 형태의 답만 고려할 수 있을까? (정규화)
     - 이 전략은 순서를 강제화하는 전략의 연장선에 있습니다.
     - 예제
-      - 아래 그림에서 실선으로 표시된 원 A를 통해서 점선으로 표시된 원을 모두 덮을 수 있을까요?
+      - 아래 그림에서 실선으로 표시된 원 A를 통해서 점선으로 표시된 원을 모두 덮을 수 있는지 확인하기
         ![](images/5.jpg)
+      - 사람이 눈으로 풀면 쉽게 풀 수 있는 문제이지만, 프로그램으로 하려면 막막해집니다.
+        - 원 A의 중심이 가능한 좌표는 거의 무한하다고 봐야합니다. 따라서 답도 1차적으로는 무한합니다.
+        - 답이 될 수 있는 후보군을 유한하게 축소해보면 어떨까요?
+      - idea
         ![](images/6.jpg)
+        - 그림 (a)의 원A를 점선원에 닿을 때까지 이동시킨 것이 그림 (b)
+        - 그림 (b)의 원A를 반시계방향으로 돌려서 다른 점선원에 닿을 때까지 이동시킨 것이 그림 (c)
+        - 그림 (c)에서 답을 찾았습니다.
+      - 만약 이 문제의 답이 있다면
+        - (점선에 접하지 않는 것이라고 할지라도) 조금만 이동시키면 위의 그림 (c)처럼 만들 수 있습니다.
+        - 즉, 답이 있다면 두 점선 원에 접하는 답도 존재합니다.
+        - 따라서 원A가 임의의 두 점선 원에 접하는 모든 경우의 수만 조사하면 답의 유무를 확인할 수 있습니다.
+          ※ 원A가 두 점선 원에 접하는 경우의 수는 2개입니다.
+      - 회고
+        - 정답이 될 수 있는 무한한 후보군을 유한한 후보군으로 정규화할 수 있었습니다.
+        - 정규화 기법은 매우 유용하지만 문제마다 적용해야할 기법이 다르기 때문에 많은 경험이 필요합니다.
 
 # 3장. 코딩과 디버깅에 관하여
 
