--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -23,10 +23,14 @@
 - 상황
 
   - 공연장을 빌려서 록 페스티발을 개최하려 함
+
   - 하루에 한 팀의 밴드가 콘서트를 함
+
   - 몇 개의 밴드를 섭외할지는 결정하지 않았지만 L개의 팀은 이미 섭외함
     (따라서 페스티벌은 최소 L일 이상 지속됨)
-  - N일 간의 공연장 대여비용을 알고 있다고 있다고 할 때
+    
+  - N일 간의 공연장 대여비용을 알고 있다고 있다고 할 때,
+    
     **L일 이상 연속해서 대여하는 평균비용을 최소화하려면** 어떻게 빌려야 하나?
 
 - 예
@@ -79,8 +83,10 @@
 #### 이 책의 구성
 
 - 전체 7부로 구성 1,2부(1장~5장)는 기본지식 함양이며 3부 이후부터는 알고리즘 기법과 자료구조
+
 - 책에 있는 모든 연습문제는 [algospot](http://algospot.com)에서 실제로 풀어볼 수 있으며 채점받을 수 있음
-![](images/1.jpg)
+
+  ![](images/1.jpg)
 
 #### 필요한 배경지식
 
@@ -204,19 +210,26 @@
      - 1차 개선
        - idea : 1명이 받은 사탕의 무게가 같다면 같은 경우로 볼 수 있음 (29장의 주제 : 너비우선탐색)
        - 3명에게 배분한 사탕을 무게로 표현하면 아래와 같음
-         - (0g, 0g, 0g) ~ (600g, 600g, 600g)   
+         - (0g, 0g, 0g) ~ (600g, 600g, 600g)
+           
            ※ 600g = 20 x 30
+           
          - 따라서 경우의 수는 :  600 ^ 3 = ‭216,000,000‬ 개 (약 2억개)
      - 2차 개선
        - idea : 사탕의 총 무게(많은 아이 - 적은 아이)의 차는 20g을 넘을 수 없음
-         ※ 왜냐하면 20이 넘으면 제일 많이 받은 아이가 제일 적게 받은 아이한테 하나 주면 되니깐
+         
+         ※ 왜냐하면 차이가 20g 이상일떄는 제일 많은 아이가 제일 적은 아이한테 하나 주면 되니깐
+         
        - 공평하게 주는게 목적이므로)가장 많이 받는 아이의 사탕은 (20 x N) / 3 + 20 = 220g 을 넘을 수 없음
          - (0g, 0g, 0g) ~ (220g, 220g, 220g)
          - 따라서 경우의 수는 : 220 ^ 3 = ‭10,648,000‬ (약 1000만개)
      - 3차 개선
        - idea : (180, 190, 200) 과 (200, 190, 180) 은 같은 답임
-         ※ 문제에서 누가 많은 받든지 순서는 중요하지 않으므로 중복
+         
+         ※ 문제에서 누가 많은 받든지 순서는 중요하지 않으므로 중복임
+         
        - 따라서 경우의 수는 : 10,648,000 / 6 = 1,774,666 (약 200만개)
+         
          ※ 3가지 수를 나열하는 방법 6을 (3 x 2 x 1) 나눠서
      - 회고
        - 단순하게 풀면 2조개의 경우의 수를 모두 체크해봐야 했음 - 실패할 확률이 매우 높았음
@@ -233,15 +246,24 @@
      - 다차원 문제를 1차원으로 바꿔보기
    - 예제
      - 2차원 격자에 N개의 점이 있을 때, 모든 점과의 거리가 최소가 되는 좌표를 찾으시오.
+       
        - 두 점의 거리 : x좌표의 차이 + y 좌표의 차이
+         
          ※ 예 : 두 점 (7, 1), (2, 3) 간의 거리는 5 + 2 = 7
+         
        - 선을 따라서 가로, 세로 방향으로만 이동가능
+       
        - 주어진 좌표
-         ![](images/2.jpg)
+         
+         ![](images/2-1.jpg)
      - 해결방법
        - idea #1 : 1차원으로 바꿔보기
+         
          ※ 두 점의 "x좌표의 차이" vs "y좌표의 차이"는 서로 독립변수임
+         
        - idea #2 : (1차원에서) N이 홀수이면 가운데 있는 점이 최저거리이고, 짝수이면 가운데 있는 두 점 사이가 최저거리임
+       
+         ![](images/2-2.jpg)
 5. 그림으로 그려볼 수 있을까?
    - 숫자보다 도형이 이해하기 쉽습니다.
    - 예를 들어 바로 위 예제문제에서
@@ -264,7 +286,9 @@
    - 해결방법
      - idea
        - 5번 전략(그림으로 그려볼 수 있을까?)를 이용해 각 선수의 기록 범위를 시각화합니다.
+         
          ![](images/3.jpg)
+         
          - 신문기사 1번에 해당하는 관계 (선수 i는 선수 j에게 반드시 패배함)
            - 0번 선수 & 2번 선수
            - 1번 선수 & 2번 선수
@@ -292,49 +316,73 @@
    - 예제
      - 5 x 5 격자의 모든 칸에 불을 켜는 최소클릭수 찾기
        - 켜진상태 : 하얀색, 꺼진상태 : 검은색
+       
        - 어떤 칸을 클릭하면 상태가 반대로 바뀌는데, 이 때 상하좌우 4개 칸도 같이 반대로 바뀜
+       
        - 즉, 아래 그림에서 2.3(a)의 가운데 칸을 클릭하면 2.3(b)처럼 변함
-         ![](images/4.jpg)
+         
+         ![](images/4-1.jpg)
      - 해결방법
        - 처음방법
          - idea
            - 어떤 순서로 칸들을 클릭하든 상관이 없습니다.
-             ![](images/4.jpg)
-           - 한 칸을 두 번 이상 클릭할 필요가 없습니다. (?)
+             
+             ![](images/4-3.jpg)
+             
+           - 한 칸을 두 번 이상 클릭할 필요가 없습니다.
+           
+             ![](images/4-4.jpg)
          - 위와 같은 이유로 각 칸을 클릭할지 말지만 고민하면 됩니다.
          - 경우의 수는 : 2 ^ 25 = ‭33,554,432‬개 (5 x 5 격자이므로)
        - 개선
          - idea : 순서를 일부러 강제화 해보기
+           
            ※ 순서는 결과에 영향을 주지 않음을 알고 있으므로
+           
          - 항상 왼쪽 위에서부터 순서대로 클릭한다고 강제화 하면 어떻게 될까요?
-           - 
+           
+           ![](images/4-2.jpg)
+           
            - c는 클릭하면 안됩니다. 그려면 a가 꺼지게 되고 다시는 켤 수 없기 때문입니다.
            - d는 클릭해야 합니다. 안 그러면 b는 영영 켜지지 않기 때문입니다.
+           
          - 규칙이 만들어 졌습니다. 
            - 맨 위에 있는 줄만 정하면 그 다음 줄들은 고정된 답을 가진다는 것입니다.
            - 결국 경우의 수가 : 2 ^ 5 = 32개로 줄어들었습니다.
        - 회고
          - 순서를 강제화함으로써 처음방법 대비 경우의 수를 100만배 감소시킬 수 있었습니다.
-           33,554,432 / 32 = 1,048,576 (약 100만)
+           
+           ※ 33,554,432 / 32 = 1,048,576 (약 100만)
+           
          - 모두 불을 켜는데 실패할 수도 있음을 주지해야 합니다.
 10. 특정 형태의 답만 고려할 수 있을까? (정규화)
     - 이 전략은 순서를 강제화하는 전략의 연장선에 있습니다.
     - 예제
       - 아래 그림에서 실선으로 표시된 원 A를 통해서 점선으로 표시된 원을 모두 덮을 수 있는지 확인하기
+        
         ![](images/5.jpg)
+        
       - 사람이 눈으로 풀면 쉽게 풀 수 있는 문제이지만, 프로그램으로 하려면 막막해집니다.
         - 원 A의 중심이 가능한 좌표는 거의 무한하다고 봐야합니다. 따라서 답도 1차적으로는 무한합니다.
         - 답이 될 수 있는 후보군을 유한하게 축소해보면 어떨까요?
+        
       - idea
+        
         ![](images/6.jpg)
+        
         - 그림 (a)의 원A를 점선원에 닿을 때까지 이동시킨 것이 그림 (b)
         - 그림 (b)의 원A를 반시계방향으로 돌려서 다른 점선원에 닿을 때까지 이동시킨 것이 그림 (c)
         - 그림 (c)에서 답을 찾았습니다.
+        
       - 만약 이 문제의 답이 있다면
         - (점선에 접하지 않는 것이라고 할지라도) 조금만 이동시키면 위의 그림 (c)처럼 만들 수 있습니다.
+        
         - 즉, 답이 있다면 두 점선 원에 접하는 답도 존재합니다.
+        
         - 따라서 원A가 임의의 두 점선 원에 접하는 모든 경우의 수만 조사하면 답의 유무를 확인할 수 있습니다.
+          
           ※ 원A가 두 점선 원에 접하는 경우의 수는 2개입니다.
+        
       - 회고
         - 정답이 될 수 있는 무한한 후보군을 유한한 후보군으로 정규화할 수 있었습니다.
         - 정규화 기법은 매우 유용하지만 문제마다 적용해야할 기법이 다르기 때문에 많은 경험이 필요합니다.
