--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -349,11 +349,8 @@
 
 1. 간결한 코드를 작성하기
    - 프로그래밍 대회에서는 전역변수와 매크로가 유용합니다.
-
    - 왜냐하면 코드의 길이가 비교적 짧고, 실수를 줄이는 것이 더 중요하기 때문입니다.
-
    - 예를 들어 아래와 같이 for 문에 매크로를 사용하면 실수를 피할 수 있습니다. (C++ 11 부터는 굳이 필요 없음)
-
      ```c++
      #define FOR(i,n) for(int i = 0; i < (n); ++i)
      bool hasDuplicate(const vector<int>& array) {
@@ -364,57 +361,44 @@
          return false;
      }
      ```
-
    - 실수가 있는 코드
-
      ```c++
      for(int i = 0; i < array.size(); ++i)
      	for(int j = 0; j < i; ++i)	// ++j 여야 함
      ```
 
 2. 적극적으로 코드 재사용하기
-
    - 3번 이상 사용되면 함수나 클래스로 분리하는 습관을 가집시다.
    - 코드가 간결해지고 디버깅하기 쉬워집니다.
    - 단, 프로그래밍 대회에서는 하나의 클래스나 함수가 여러가지 일을 해도 됩니다.
      실무에서처럼 SRP(Single Responsibility Principle)는 지키지 않아도 됩니다.
 
-3. 표준 라이브러리 공부하기
-
+**3. 표준 라이브러리 공부하기**
    - 표준 라이브러리에서 제공하는 알고리즘, 자료구조는 직접 구현하지 안 됩니다.
    - 문자열, 동적배열, 스택, 큐, 리스트, 사전 등의 자료구조와 정렬 등의 표준알고리즘을 적극 사용합시다.
 
-4. 항상 같은 형태로 프로그램을 작성하기
-
+**4. 항상 같은 형태로 프로그램을 작성하기**
    - 자주 작성하는 코드나 알고리즘은 일관성 있게 구현해야 합니다.
    - 예를 들어
      - while / do-while 중 어떤것을 사용할지
      - 2차원 배열을 크기를 가로/세로 or 세로/가로 중 어떤 순서로 전달할지
 
 5. 일관적이고 명료한 명명법 사용하기
-
    - 이 부분은 실무에서 적용되는 규칙이 그대로 적용됩니다.
-
    - 예를 들어
-
      - 변수명을 모호하게 만들면 안 됩니다.
-
        ```c++
        int a[30][30], i, j, p[100], k=0, l=-1;
        ```
-
      - 함수명도 모호하게 만들지 말고, 무엇을 하는 함수인지 명료하게 작성해야 합니다.
-
        ```c++
        bool judge(int y, int x, int cy, int cx, int cr);
        ```
-
        ```c++
        bool isInsideCircle(int y, int x, int cy, int cx, int cr)
        ```
 
 6. 모든 자료를 정규화해서 저장하기
-
    - 정규화는 어떤 자료를 입력받자마자 바로 수행해야 합니다.
    - 예를 들어
      - 유리수 :  9/6 = 3/2는 같으므로 기약분수로 표현
@@ -423,11 +407,8 @@
      - 시간 : UTC로 통일
 
 7. 코드와 데이터를 분리하기
-
    - 예를 들어
-
      - 아래 코드에서 각 달의 문자열 데이터는 분리해야 합니다.
-
        ```c++
        string getMonthName(int month) {
         if(month == 1) return "January";
@@ -436,13 +417,10 @@
         return "December";
        }
        ```
-
        ```c++
        const string monthName[] = {"January", "Feburary", ..., "December"};
        ```
-
      - 체스판 같은 게임보드에서 상대좌표
-
        ```c++
        const int knightDx[8] = { 2,  2, -2, -2, 1, 1, -1, -1 };
        const int knightDy[8] = { 1, -1,  1, -1, 2, 2,  2, -2 };
@@ -453,14 +431,11 @@
 자주하는 실수 12가지
 
 1. 산술 오버플로우
-   
    - 중요해서 3.5에서 따로 다룸
+
 2. 배열 범위 밖 원소에 접근
-
    - 배열의 size와 index를 꼭 구별해서 사용합시다.
-
    - 아래와 같이 선언해서 array[10] 에 접근하면 컴파일 에러도 안나기 때문에 디버깅하기 어려운 문제가 런타임에 발생합니다.
-
      ```c++
      int array[10], t;
      ```
@@ -501,21 +476,14 @@
    - 실무에서는 2차원 배열보다 차수가 큰 배열을 사용하는 경우가 드물지만 프로그래밍 대회에서는 이런 상황이 종종 발생합니다.
    - 이것을 헷갈리지 말아야 하며 8장의 메모이제이션 부분을 설명할때 상세히 배웁니다.
 
-8. 잘못된 비교 함수 작성
-
+**8. 잘못된 비교 함수 작성**
    - C++ < 연산자의 성질
-
      - a<a는 항상 거짓입니다, 이 성질을 비반사성이라고 합니다.
-
      - a<b가 참이면 b<a는 거짓입니다, 이 성질을 비대칭성이라고 합니다.
-
      - a<b가 참이고 b<c가 참이면 a<c 입니다, 이 성질을 전이성이라고 합니다.
-
      - a<b와 b<a가 모두 거짓이면 a와b는 같은 값으로 간주합니다, a와b가 같고, b와c가 같다면 a와c도 같아야 합니다.
        이 성질을 상등관계의 전이성이라고 합니다.
-
      - 위의 정보를 참고하여 아래와 같이 집합 비교함수를 overloading 해서 C++ 표준 정렬함수(sort)에 전달하면 결과를 예측할 수 없습니다.
-
        ```c++
        // 진부분집합을 판정하는 함수
        bool isProperSubset(const IntegerSet& a, const IntegerSet& b);
@@ -530,23 +498,14 @@
          return false;
        }
        ```
-
    - 이 때, 아래와 같은 3가지 집합을 정렬함수에 전달하면 위의 규칙에 혼란이 발생합니다.
-
      - {1} < {2} < {2,3} 
-
      - 먼저, isProperSubset 함수는 {2} < {2,3} 에 대해 true 를 반환하는데 이와 다른 결과도 아래처럼 생성됩니다.
-
      - C++ < 연산자 "규칙4"에 의해 아래 2가지가 성립됩니다.
-
        - {1}<{2} : 거짓 / {2}<{1} : 거짓이므로 {1} == {2}
-
        - {1}<{2,3} : 거짓 / {2,3}<{1} : 거짓이므로 {1} == {2,3}
-
      - 이로 인해 {1} == {2} == {2,3} 가 되고 {2} < {2,3} 과 충돌이 발생하게 됩니다.
-
      - 그러므로 아래와 같이 구현해야 합니다.
-
        ```c++
        bool operator<(const IntegerSet& a, const IntegerSet& b)
        {
@@ -558,11 +517,8 @@
        ```
 
 9. 최소, 최대 예외 잘못 다루기
-
    - 최대,최소값(즉, 경계값)에 대한 오류만 확인해도 많은 문제를 사전에 예방할 수 있습니다.
-
    - 예를 들어, 아래코드는 소수를 구별하는 코드인데 최소값 문제가 있습니다.
-
       ```c++
       bool isPrime(int n)
       {
@@ -576,40 +532,30 @@
         return true;
       }
       ```
-
    - 문제점
-
      - 2는 짝수이지만 소수이며
      - 1은 소수가 아님에도 true를 리턴
 
 10. 연산자 우선순위 잘못 쓰기
-
     - if (b & 1 == 0) 은 항상 거짓임
     - if ((b & 1) == 0) 과 같이 우선순위가 확실하지 않을때는 항상 괄호를 써줘야 함
 
 11. 너무 느린 입출력 방식 선택
-
     - 프로그래밍 대회에서는 입력자료가 10000개~ 도 넘어가는 경우가 더러 있음
     - 이럴 때에 시간초과로 오답처리 되는 경우도 있음
     - C++ 에서 지원하는 입력함수 gets() , cin 중 gets() 가 성능면에서 훨씬 좋음
     - cin을 사용하기 전에 동기화를 끄는 방법도 있음 : cin.sync_with_stdio(false);
 
 12. 변수 초기화 문제
-
     - 많은 프로그래밍 대회에서는 여러벌의 데이터를 주고 반복해서 답을 처리하는 경우가 많음
-
     - 1벌의 데이터를 처리하고 나서는 꼭 초기화를 해줘야 함
-
     - 초기화를 항상 하는 것이 가장 좋은 방법이며, 아래와 같은 방법으로 테스트하는 것도 도움이 됨
-
     - 입력데이터를 복사해서 2배로 늘림 (작은 데이터처리 후에 큰 데이터 처리할 때 문제가 생기는 경우 및 반대의 경우를 걸러줌)
-
       ```c++
       2
       1234
       321
       ```
-
       ```c++
       4
       1234
@@ -641,19 +587,13 @@
 ## 3.5 변수 범위의 이해
 
 - 산술 오버플로우
-
   - 자료형의 크기는 한계가 있기 때문에 이를 벗어나는 경우를 오버플로우라고 함
   - 값이 너무 큰 경우, 값이 너무 작은 경우 모두 포함함
   - 프로그래밍 과정에서 범하는 가장 흔한 실수임
-
 - 너무 큰 결과
-
   - 결과값이 32비트를 넘어갈 것으로 예상하면 64비트 변수를 사용하는데, 최종값은 64비트를 사용하면서 중간값은 32비트를 사용하는 실수
-
 - 너무 큰 중간 값
-
   - 최소공배수를 구하는 아래 코드는 문제를 일으킵니다.
-
     ```c++
     // 최대공약수를 구하는 함수
     int gcd(int a, int b);
@@ -664,53 +604,39 @@
       return (a*b) / gcd(a,b);
     }
     ```
-
   - 만약 lcm(50000, 100000) 을 해보면 최소공배수는 100,000 이 나와야 한다 그러나 실제로는 14,100 이 반환됩니다.
   - 그 이유는 a*b = 50,000 x 100,000 = 5 *10^9 = 5,000,000,000가 되어 (signed) int 의 최대값인 2,147,483,647을 넘어가기 때문입니다.
   - C++ 컴파일러는 이러한 경우에 경고를 하지 않기 때문에 프로그래머는 이런 부분에 항상 유의해야 합니다.
-
 - 너무 큰 무한대 값
-
   - 알고리즘을 구현하다 보면 아직 알지 못하는 값을 무한대로 지정하곤 합니다.
   - 이 때는 무한대 값을 가지고 곱셈 등의 연산을 하는지 확인한 후, 적절한 값을 선택합니다.
   - 예를 들어, 필자의 경우 signed int 에 대해서는 아래와 같이 무한대값을 설정하곤 합니다.
     - 987,654,321
     - 이것은 2^30 에 가까울 정도로 크며, 2개가 더해지더라도 오버플로우가 나지 않습니다.
-
 - 오버플로우 피해하기
-
   - 가장 간단한 방법은 더 큰 자료형을 쓰는 것입니다.
-
   - 예를 들어, 앞에 lcm 함수는 64비트 정수형을 쓰면 쉽게 고칠 수 있습니다.
-
     ```c++
     int lcm(int a, int b)
     {
       return (a * (long long) b) / gcd(a,b);
     }
     ```
-
   - 두번째 방법은 연산의 순서를 바꾸는 것입니다.
-
     ```c++
     int lcm(int a, int b)
     {
       return a * (b / gcd(a,b));
     }
     ```
-
   - 연산방법을 다르게 하는 경우도 있는데(동적계획법) 이러한 방법은 8장에서 심화하여 다룹니다.
-
 - 자료형의 프로모션
-
   - C++ 에서 연산에 의한 자료형 프로모션 규칙은 아래와 같습니다.
     - 규칙1: 한쪽은 정수형이고 한쪽은 실수형 - 정수형이 실수형으로 변환
     - 규칙2: 양쪽이 정수형이거나 양쪽이 실수형 - 보다 넓은 범위를 갖는 자료형으로 변환
     - 규칙3: 양쪽이 int형보다 작은 정수형인 경우 - 둘 다 int형으로 변환됨
     - 규칙4: 부호 없는 정수형과 부호 있는 정수형이 섞여 있는 경우 - 부호 없는 정수형으로 변환됨
-  
 - 예를 들어 아래와 같은 수식의 결과는 어떻게 될까요?
-  
     ```c++
     unsigned char a = 17;
     short b = -18;
@@ -718,18 +644,12 @@
     unsinged int d = 0;
     
     cout << (a + b) * c + d << endl;
-  ```
-  
-  - (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않습니다.
-  
+  ```  
+  - (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않습니다.  
   - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생하기 때문입니다.
-  
 - 결과값은 4,294,967,294 가 출력됩니다.
-  
   - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 합니다.
-  
   - 아래와 같은 경우도 마찬가지입니다.
-  
     ```c++
     bool isSorted(const vector<int>& seq)
     {
@@ -740,42 +660,23 @@
       return true;
     }
     ```
-  
 
 ## 3.6 실수 자료형의 이해
 
-- 결론적으로는 컴퓨터로는 근사값만을 제공할 수 있으므로 최대한 사용하지 않는 것이 좋습니다
-
+- 결론부터 말하면 최대한 사용하지 않는 것이 좋습니다
 - 실수가 부정확할 수 밖에 없는 이유는 아래와 같습니다.
-
   - 이진수 0.11111 이 있다면 각각의 1은 아래를 의미합니다.
   - 0.5, 0.25, 0.125, 0.0625, 0.03125... 
-  - 즉, 10진수의 소수를 표현하려면 2씩 나눠간 값을 더하는 구조이므로 제한된 비트수에서는 동일한 값을 표현할 수 없습니다.
-
+  - 즉, 10진수의 소수를 표현하려면 2씩 나눠간 값을 더하는 구조이므로 제한된 비트수에서는 정확한 값을 표현할 수 없습니다.
+  - 또한, 파이와 같은 무한소수 등은 원래부터 표현이 불가능합니다.
 - 예제
-
   - 아래 코드의 출력결과?
-
-    ```c++
-    float a = 69.82;
-    float b = 69.20 + 0.62;
-    
-    if(a == b)
-        printf("Equal");
-    else
-        printf("Not Equal");
-    ```
-
-  - 아래 코드의 출력결과?
-
     ```c++
     float a = 0.775;
     printf("Result = %.2f",a);
     ```
-
 - 실수형을 사용하려면 오차범위를 명확하게 예상하거나 되도록이면 64비트 실수형(double)을 사용하는 것이 좋습니다.
-
 - 실수연산을 정수연산으로 변환하는 것도 고려해봅시다.
-
-  - 예를 들어, a/bxc=정수 라는 것을 알고 있다면 (axc)/b 와 같은 형태로 계산
-  - 자리수를 정수배 늘려서 계산
+  - 자리수를 정수배 늘려서 계산 : 0.5 < 0.7 이라는 수식을 5 < 7 로 계산
+  - 3개의 정수 a,b,c가 있을 때, a/bxc 의 결과가 항상 정수라면, (axc)/b 와 같은 형태로 계산하면 중간에 실수 연산을 없앨 수 있음  
+    (극단적인 예)
