--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -373,11 +373,11 @@
    - 단, 프로그래밍 대회에서는 하나의 클래스나 함수가 여러가지 일을 해도 됩니다.
      실무에서처럼 SRP(Single Responsibility Principle)는 지키지 않아도 됩니다.
 
-**3. 표준 라이브러리 공부하기**
+3. **표준 라이브러리 공부하기**
    - 표준 라이브러리에서 제공하는 알고리즘, 자료구조는 직접 구현하지 안 됩니다.
    - 문자열, 동적배열, 스택, 큐, 리스트, 사전 등의 자료구조와 정렬 등의 표준알고리즘을 적극 사용합시다.
 
-**4. 항상 같은 형태로 프로그램을 작성하기**
+4. **항상 같은 형태로 프로그램을 작성하기**
    - 자주 작성하는 코드나 알고리즘은 일관성 있게 구현해야 합니다.
    - 예를 들어
      - while / do-while 중 어떤것을 사용할지
@@ -476,7 +476,7 @@
    - 실무에서는 2차원 배열보다 차수가 큰 배열을 사용하는 경우가 드물지만 프로그래밍 대회에서는 이런 상황이 종종 발생합니다.
    - 이것을 헷갈리지 말아야 하며 8장의 메모이제이션 부분을 설명할때 상세히 배웁니다.
 
-**8. 잘못된 비교 함수 작성**
+8. **잘못된 비교 함수 작성**
    - C++ < 연산자의 성질
      - a<a는 항상 거짓입니다, 이 성질을 비반사성이라고 합니다.
      - a<b가 참이면 b<a는 거짓입니다, 이 성질을 비대칭성이라고 합니다.
