--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -540,7 +540,7 @@
     - if (b & 1 == 0) 은 항상 거짓임
     - if ((b & 1) == 0) 과 같이 우선순위가 확실하지 않을때는 항상 괄호를 써줘야 함
 
-11. 너무 느린 입출력 방식 선택
+11. **너무 느린 입출력 방식 선택**
     - 프로그래밍 대회에서는 입력자료가 10000개~ 도 넘어가는 경우가 더러 있음
     - 이럴 때에 시간초과로 오답처리 되는 경우도 있음
     - C++ 에서 지원하는 입력함수 gets() , cin 중 gets() 가 성능면에서 훨씬 좋음
@@ -646,10 +646,10 @@
     cout << (a + b) * c + d << endl;
   ```  
   - (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않습니다.  
-  - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생하기 때문입니다.
-- 결과값은 4,294,967,294 가 출력됩니다.
-  - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 합니다.
-  - 아래와 같은 경우도 마찬가지입니다.
+    - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생하기 때문입니다.
+  - 결과값은 4,294,967,294 가 출력됩니다.
+    - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 합니다.
+    - 아래와 같은 경우도 마찬가지입니다.
     ```c++
     bool isSorted(const vector<int>& seq)
     {
