--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -34,6 +34,7 @@
     - 3일 빌리면 ==> (1+2+3) / 3 = 2 
     - 4일 빌리면 ==> (1+2+3+1) / 4 = 1.75
 - 시간 및 메모리 제한
+  
   - 2초 안에 실행되어야 하며, 64MB 이하의 메모리
 - 입력
   - 첫번째 줄 : 테스트 케이스의 수 C (C <= 100)
@@ -431,8 +432,9 @@
 자주하는 실수 12가지
 
 1. 산술 오버플로우
-   - 중요해서 3.5에서 따로 다룸
-
+   
+- 중요해서 3.5에서 따로 다룸
+   
 2. 배열 범위 밖 원소에 접근
    - 배열의 size와 index를 꼭 구별해서 사용합시다.
    - 아래와 같이 선언해서 array[10] 에 접근하면 컴파일 에러도 안나기 때문에 디버깅하기 어려운 문제가 런타임에 발생합니다.
@@ -566,7 +568,7 @@
 
 ## 3.4 디버깅과 테스팅
 
-#### 디버깅에 관하여
+### 디버깅에 관하여
 
 - 직접 눈으로 디버깅하는 연습을 합시다.
   - 소스코드가 길지 않아서 눈이 더 빠름
@@ -586,69 +588,80 @@
 
 ## 3.5 변수 범위의 이해
 
-- 산술 오버플로우
-  - 자료형의 크기는 한계가 있기 때문에 이를 벗어나는 경우를 오버플로우라고 함
-  - 값이 너무 큰 경우, 값이 너무 작은 경우 모두 포함함
-  - 프로그래밍 과정에서 범하는 가장 흔한 실수임
-- 너무 큰 결과
-  - 결과값이 32비트를 넘어갈 것으로 예상하면 64비트 변수를 사용하는데, 최종값은 64비트를 사용하면서 중간값은 32비트를 사용하는 실수
-- 너무 큰 중간 값
-  - 최소공배수를 구하는 아래 코드는 문제를 일으킵니다.
-    ```c++
-    // 최대공약수를 구하는 함수
-    int gcd(int a, int b);
-    
-    // 최소공배수를 구하는 함수
-    int lcm(int a, int b)
-    {
-      return (a*b) / gcd(a,b);
-    }
-    ```
-  - 만약 lcm(50000, 100000) 을 해보면 최소공배수는 100,000 이 나와야 한다 그러나 실제로는 14,100 이 반환됩니다.
-  - 그 이유는 a*b = 50,000 x 100,000 = 5 *10^9 = 5,000,000,000가 되어 (signed) int 의 최대값인 2,147,483,647을 넘어가기 때문입니다.
-  - C++ 컴파일러는 이러한 경우에 경고를 하지 않기 때문에 프로그래머는 이런 부분에 항상 유의해야 합니다.
-- 너무 큰 무한대 값
-  - 알고리즘을 구현하다 보면 아직 알지 못하는 값을 무한대로 지정하곤 합니다.
-  - 이 때는 무한대 값을 가지고 곱셈 등의 연산을 하는지 확인한 후, 적절한 값을 선택합니다.
-  - 예를 들어, 필자의 경우 signed int 에 대해서는 아래와 같이 무한대값을 설정하곤 합니다.
-    - 987,654,321
-    - 이것은 2^30 에 가까울 정도로 크며, 2개가 더해지더라도 오버플로우가 나지 않습니다.
-- 오버플로우 피해하기
-  - 가장 간단한 방법은 더 큰 자료형을 쓰는 것입니다.
-  - 예를 들어, 앞에 lcm 함수는 64비트 정수형을 쓰면 쉽게 고칠 수 있습니다.
-    ```c++
-    int lcm(int a, int b)
-    {
-      return (a * (long long) b) / gcd(a,b);
-    }
-    ```
-  - 두번째 방법은 연산의 순서를 바꾸는 것입니다.
-    ```c++
-    int lcm(int a, int b)
-    {
-      return a * (b / gcd(a,b));
-    }
-    ```
-  - 연산방법을 다르게 하는 경우도 있는데(동적계획법) 이러한 방법은 8장에서 심화하여 다룹니다.
-- 자료형의 프로모션
-  - C++ 에서 연산에 의한 자료형 프로모션 규칙은 아래와 같습니다.
-    - 규칙1: 한쪽은 정수형이고 한쪽은 실수형 - 정수형이 실수형으로 변환
-    - 규칙2: 양쪽이 정수형이거나 양쪽이 실수형 - 보다 넓은 범위를 갖는 자료형으로 변환
-    - 규칙3: 양쪽이 int형보다 작은 정수형인 경우 - 둘 다 int형으로 변환됨
-    - 규칙4: 부호 없는 정수형과 부호 있는 정수형이 섞여 있는 경우 - 부호 없는 정수형으로 변환됨
-  - 예를 들어 아래와 같은 수식의 결과는 어떻게 될까요?
-    ```c++
-    unsigned char a = 17;
-    short b = -18;
-    int c = 2;
-    unsinged int d = 0;
-    
-    cout << (a + b) * c + d << endl;
-    ```  
-  - (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않습니다.  
-    - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생하기 때문입니다.
-  - 결과값은 4,294,967,294 가 출력됩니다.
-    - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 합니다.
+### 산술 오버플로우
+
+- 자료형의 크기는 한계가 있기 때문에 이를 벗어나는 경우를 오버플로우라고 함
+- 값이 너무 큰 경우, 값이 너무 작은 경우 모두 포함함
+- 프로그래밍 과정에서 범하는 가장 흔한 실수임
+
+### 너무 큰 결과
+
+- 결과값이 32비트를 넘어갈 것으로 예상하면 64비트 변수를 사용하는데, 최종값은 64비트를 사용하면서 중간값은 32비트를 사용하는 실수
+
+### 너무 큰 중간 값
+
+- 최소공배수를 구하는 아래 코드는 문제를 일으킵니다.
+  ```c++
+  // 최대공약수를 구하는 함수
+  int gcd(int a, int b);
+  
+  // 최소공배수를 구하는 함수
+  int lcm(int a, int b)
+  {
+    return (a*b) / gcd(a,b);
+  }
+  ```
+- 만약 lcm(50000, 100000) 을 해보면 최소공배수는 100,000 이 나와야 한다 그러나 실제로는 14,100 이 반환됩니다.
+- 그 이유는 a*b = 50,000 x 100,000 = 5 *10^9 = 5,000,000,000가 되어 (signed) int 의 최대값인 2,147,483,647을 넘어가기 때문입니다.
+- C++ 컴파일러는 이러한 경우에 경고를 하지 않기 때문에 프로그래머는 이런 부분에 항상 유의해야 합니다.
+
+### 너무 큰 무한대 값
+
+- 알고리즘을 구현하다 보면 아직 알지 못하는 값을 무한대로 지정하곤 합니다.
+- 이 때는 무한대 값을 가지고 곱셈 등의 연산을 하는지 확인한 후, 적절한 값을 선택합니다.
+- 예를 들어, 필자의 경우 signed int 에 대해서는 아래와 같이 무한대값을 설정하곤 합니다.
+  - 987,654,321
+  - 이것은 2^30 에 가까울 정도로 크며, 2개가 더해지더라도 오버플로우가 나지 않습니다.
+
+### 오버플로우 피해하기
+
+- 가장 간단한 방법은 더 큰 자료형을 쓰는 것입니다.
+- 예를 들어, 앞에 lcm 함수는 64비트 정수형을 쓰면 쉽게 고칠 수 있습니다.
+  ```c++
+  int lcm(int a, int b)
+  {
+    return (a * (long long) b) / gcd(a,b);
+  }
+  ```
+- 두번째 방법은 연산의 순서를 바꾸는 것입니다.
+  ```c++
+  int lcm(int a, int b)
+  {
+    return a * (b / gcd(a,b));
+  }
+  ```
+- 연산방법을 다르게 하는 경우도 있는데(동적계획법) 이러한 방법은 8장에서 심화하여 다룹니다.
+
+### 자료형의 프로모션
+
+- C++ 에서 연산에 의한 자료형 프로모션 규칙은 아래와 같습니다.
+  - 규칙1: 한쪽은 정수형이고 한쪽은 실수형 - 정수형이 실수형으로 변환
+  - 규칙2: 양쪽이 정수형이거나 양쪽이 실수형 - 보다 넓은 범위를 갖는 자료형으로 변환
+  - 규칙3: 양쪽이 int형보다 작은 정수형인 경우 - 둘 다 int형으로 변환됨
+  - 규칙4: 부호 없는 정수형과 부호 있는 정수형이 섞여 있는 경우 - 부호 없는 정수형으로 변환됨
+- 예를 들어 아래와 같은 수식의 결과는 어떻게 될까요?
+  ```c++
+  unsigned char a = 17;
+  short b = -18;
+  int c = 2;
+  unsinged int d = 0;
+  
+  cout << (a + b) * c + d << endl;
+  ```
+- (17 - 18) x 2 + 0 = -2 가 되어야 하지만 실제로는 그렇지 않습니다.  
+  - 왜냐하면 규칙4에 의해서 최종결과값은 unsigned int 가 되는데 -2 라는 값은 저장할 수 없기 때문에 오버플로우가 발생하기 때문입니다.
+- 결과값은 4,294,967,294 가 출력됩니다.
+  - C#, JAVA 등에서는 발생하지 않는 문제이지만 C++을 사용하는 이상 항상 고려해야 합니다.
 
 ## 3.6 실수 자료형의 이해
 
