--- a/doc/ch1-3.md
+++ b/doc/ch1-3.md
@@ -671,7 +671,7 @@
   - 즉, 10진수의 소수를 표현하려면 2씩 나눠간 값을 더하는 구조이므로 제한된 비트수에서는 정확한 값을 표현할 수 없습니다.
   - 또한, 파이와 같은 무한소수 등은 원래부터 표현이 불가능합니다.
 - 예제
-  - 아래 코드의 출력결과?
+  - 아래 코드의 출력결과? [online_compiler](https://www.onlinegdb.com/online_c++_compiler)
     ```c++
     float a = 0.775;
     printf("Result = %.2f",a);
