--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -187,9 +187,14 @@
 
   * 알고리즘 수행속도 분석
     * 첫번째 for문 : (M-1) - 0 = M - 1
+    
     * 두번째 for문 : N - (M-1) = N - M + 1
+    
     * 수행속도 : (M - 1) + (N - M + 1) = N
+    
     * 개선된 알고리즘의 수행속도는 입력된 데이터의 크기와 동일합니다.
+    
+      ![](images/3-1.jpg)
   
 * 위의 개선안과 같이 입력의 크기와 속도가 동일한 알고리즘을 선형시간 (linear time) 알고리즘이라고 합니다.
 
@@ -598,10 +603,3 @@
 * 이제 실제로 한 번 보겠습니다.
 
   ![](images/9.jpg)
-
-
-
-
-
-
-
