--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -245,12 +245,11 @@
 
 ### 그래도 선형 시간 아닌가요?
 
-* C++에서 제공하는 함수를 사용하려면 사실 2가지 추가작업이 필요해 보입니다.
+* C++에서 제공하는 함수를 사용하려면 2가지 추가작업이 필요해 보입니다. 그래서 결국 선형시간 아닌가요?
   * 정렬이 되어 있어야 한다.
   * A라는 배열에 {0, 0, 0, ....., 1, 1, 1} 과 같이 성형여부를 알 수 있는 정보가 이미 있어야 한다.
-* 이러한 추가작업으로 인해 선형시간보다 빨라보이지 않을 수도 있습니다.
-* 그러나 추가작업으로 이진탐색의 수행속도를 판단하는 것은 맞지 않습니다, 왜냐하면
-  * 정렬은 한 번만 해놓으면 이진탐색을 수없이 수행할 수 있기 때문에 분리해야 합니다.
+* 이러한 추가작업으로 이진탐색의 수행속도를 판단하는 것은 맞지 않습니다, 왜냐하면
+  * 정렬은 한 번만 해놓으면 이진탐색을 수 없이 수행할 수 있기 때문에 분리해서 계산해야 합니다.
   * A라는 배열을 미리 만들어서 가지고 있지 않아도 됩니다. 직접 이진탐색을 구현한다면 찾아진 사진만 판단하면 되기 때문입니다. 즉, 성형했는지 확인하는 함수를 만들어서 17번만 호출하면 됩니다.
 
 ### 구현
@@ -264,7 +263,8 @@
 
 * 현재까지 다룬 lgN, N, N^2 등과 같은 알고리즘을 다항 시간 알고리즘이라고 부릅니다.
 * 그런데 lgN 과 N^100 은 속도차이가 엄청날텐데 왜 묶어서 표현할까요?
-* 바로 다항시간보다 훨씬 느린 지수시간 알고리즘이 있기 때문입니다.
+* 바로 다항시간보다 훨씬 느린 지수시간 알고리즘이 있기 때문입니다. 
+* 지수시간 알고리즘은 여러 다항시간 알고리즘 간의 차이는 다른 차원으로 극적으로 느립니다.
 
 ### 알러지가 심한 친구들
 
@@ -284,7 +284,7 @@
 
     ※ 각각의 음식은 "포함 된다" vs "안 된다" 라는 2가지 상태를 가짐
 
-  *  추출한 경우의 수가 원하는 조건을 만족하는지 검사
+  *  추출된 각각의 경우에 대해 원하는 조건을 만족하는지 검사
 
 * 6장에서 자세히 다루지만, 이렇게 모든 경우의 수를 탐색하는 가장 쉬운 방법은 재귀함수를 이용하는 것입니다.
 
@@ -316,27 +316,29 @@
 
   * 코드해석
 
-    * 아래와 같이 음식조합으로 가능한 모든 경우를 구하게 되고
+    * 재귀함수를 통해 음식조합으로 가능한 모든 경우를 구함
 
-    * 재귀함수가 기저사례가지 도달하면(위 트리의 리프노드), 각 경우에서 선택된 메뉴의 갯수를 반환합니다.
+    * 재귀함수가 기저사례가지 도달하면(위 트리의 리프노드) 모든 친구들의 알러지를 피해갈 수 있는지 확인
 
+    * 확인결과 성공이면 포함된 메뉴의 개수를 저장 (더 적은 값으로)
+    
       ![](images/6.jpg)
 
 #### 지수 시간 알고리즘
 
 * 알고리즘 수행속도 분석
   * 음식 M개로 만들수 있는 조합의 개수 : 2^M 개
-  * 각각의 조합이 만들어질때마다 canEverybodyEat() 으로 확인 : NM 으로 가정
-  * 최종 수행시간 : N x M x 2^M
+  * 알러지를 피해갈 수 있는 확인하는 함수 canEverybodyEat()의 수행속도는 NM 으로 가정
+  * 최종 수행속도 : N x M x 2^M
 * 이렇게 2^M 과 같은 수행시간을 가지는 알고리즘을 지수시간 (exponential time) 알고리즘이라고 부릅니다.
-* 지수시간 알고리즘은 입력데이터가 조금만 커져도 급속도로 수행시간이 늘어나는 매우 속도가 느린 알고리즘입니다.
+* 지수시간 알고리즘은 입력데이터가 조금만 커져도 급속도로 수행시간이 늘어나는 매우 느린 알고리즘입니다.
 * 그럼 개선할 수 있을까요?
   * 사실 위 문제는 set cover 라고 하는 유명한 알고리즘 문제 중 하나이며 개선방법은 아직 없습니다.
-  * 11장에서 이러한 지수시간 알고리즘을 조금 빠르게 개선하는 방법을 소개하긴 하지만, 지수시간을 극복할 수는 없습니다.
+  * 11장에서 이러한 지수시간 알고리즘을 조금 빠르게 개선하는 방법을 소개하긴 하지만, 여전히 지수시간을 극복할 수는 없습니다.
 
 ### 소인수 분해의 수행 시간
 
-* 지금까지는 입력 데이터의 개수에 따라 수행속도가 달라졌습니다. (많으면 느리고 적으면 빠르고)
+* 지금까지는 입력 데이터의 개수에 따라 수행속도가 달라졌습니다. (입력 데이터가 많으면 느리고 적으면 빠르고)
 
 * 그러나 항상 그런것은 아닙니다.
 
@@ -355,29 +357,33 @@
   }
   ```
 
-  * 코드의 내용보다도 입력값을 설명합니다.
+  * 위 코드의 내용보다도 입력값 보겠습니다.
 
-  * 위 코드는 입력의 개수는 하나인데도 그 값에 따라서 수행속도가 달라집니다.
+  * 입력의 개수는 하나인데도 그 값의 크기에 따라서 수행속도가 달라집니다.
 
     * 지금까지는 입력의 개수에 따라 수행속도를 계산해왔기 때문에 이 부분이 약간 혼란이 올 수도 있습니다.
 
+      (표현방법이 애매할 수 있다는 뜻)
+
     * 쉽게 생각하면, int n 에 저장된 값에 따라 비트정보가 달라질테니 이것도 역시 입력의 크기에 따라 수행속도가 달라진다고 생각하면 편합니다.
 
-      ※ 같은 int n 안에서도 0000 , 0001 과 같이 비트단위로 데이터 크기가 달라짐
-
-  * 결론적으로 위의 코드는 입력의 크기에 대한 지수시간 알고리즘이다라고 말하면 됩니다.
+      ※ 같은 int n 안에서도 0000 , 0001 과 같이 비트단위로 데이터 크기가 달라지므로
+  
+  * 결론적으로 이런 코드에 대해서는 **입력의 크기에 대한 지수시간 알고리즘이다**라고 말하면 됩니다.
 
 ## 4.5 시간 복잡도
 
-* 먼저 알고리즘의 수행시간을 측정하는 기준을 시간 복잡도(time complexity)라고 부릅니다.
+* 알고리즘의 수행시간을 측정하는 기준을 시간 복잡도(time complexity)라고 부릅니다.
 
-* 사칙연산, 대입문 등의 기본적인 연산의 수행횟수를 통해 계산합니다.
+* 시간복잡도는 사칙연산, 대입문 등의 언어에서 제공하는 기본적인 연산 한줄의 개수를 통해 계산합니다.
 
-* **A의 시간복잡도가 B보다 높다**는 것은 곧 A알고리즘이 더 느리다는 의미입니다.
+* **A의 시간복잡도가 B보다 높다** == A알고리즘이 더 느리다
 
-  * 다만, 데이터의 크기에 따라서 시간복잡도가 높은 알고리즘이 더 빠를수도 있다는 점도 기억해야 합니다.
+  * 한 가지 주의할 점은
 
-  * 예제
+  * 입력데이터의 양이 적으면 시간복잡도가 높은 알고리즘의 수행속도가 더 빠를수도 있다는 점입니다.
+
+  * 예제 : 두 알고리즘 A, B의 시간복잡도가 아래와 같다고 해봅시다.
 
     * 알고리즘 A : 10240 + (35 x lgN)
 
@@ -385,61 +391,62 @@
 
     * 우리는 lgN 이 N 보다 빠르다는 것을 이미 배웠습니다. 
 
-    * 그러나 아래 그래프와 같이 N 의 값이 충분히 작다면 알고리즘 B가 더 빠릅니다.
-
+    * 그러나 아래 그래프와 같이 N 의 값이 충분히 작다면 알고리즘 B가 더 빠를 수 있습니다.
+  
       ![](images/7.jpg)
 
-### 입력의 종류에따른 수행 시간의 변화
+### 입력의 종류에 따른 수행 시간의 변화
 
-* 아쉽게도 입력의 크기가 유일한 척도는 아닙니다.
+* 아쉽게도 입력의 크기가 수행 시간을 결정하는 유일한 척도는 아닙니다.
 
-* 예제
+* 예제 : 아래 코드는 array에서 element를 찾는 코드입니다.
 
-  * 아래 코드는 array 에서 element를 찾는 코드입니다.
+  ```c++
+int firstIndex(const vector<int>& array, int element) {
+  	for(int i = 0; i < array.size(); ++i)
+		if(array[i] == element)
+  			return i;
+  	return -1;
+  } 
+  ```
+  
+* 그런데 element의 위치에 따라서 매번 수행시간이 달라질 것입니다.
 
-  * 그런데 element의 위치에 따라서 매번 수행시간이 다라질 것입니다.
-
-    ```c++
-    int firstIndex(const vector<int>& array, int element) {
-    	for(int i = 0; i < array.size(); ++i)
-    		if(array[i] == element)
-    			return i;
-    	return -1;
-    } 
-    ```
-
-* 그럼 어떻게 해야할까요?
-
-* 최선, 최악, 평균 수행시간을 모두 구하는 것입니다.
+* 이런 경우에는 **최선**, **최악**, **평균** 수행시간을 모두 구하는 것입니다.
 
   * 최선 : 1번 - element가 arrray의 맨 앞에 있을 때
   * 최악 : N번 - element가 array의 맨 뒤에 있을 때
   * 평균 : N/2번
 
-* 일반적으로 최악의 수행시간을 많이 사용하지만, 예외의 경우도 있을 수 있습니다.
+* 그리고 일반적으로 최악의 수행시간을 많이 사용하지만, 예외의 경우도 있을 수 있습니다.
 
   ※ 예 : 퀵정렬
 
 ### 점근적 시간 표기: O (빅오) 표기
 
-* 시간복잡도는 기본연산을 모두 계산해야 하기 때문에 어려울 때가 많습니다.
+* 시간복잡도는 기본연산을 모두 계산해야 하기 때문에 빠르게 계산하기 어려울 때가 많습니다.
 
-* 우리가 반복문만 고려했던 것처럼 대세에 큰 지장이 없는 부분은 표시하지 않는 것이 점근적 시간표기입니다.
+* 위의 예제들에서 대세에 영향을 주는 반복문만 고려했던 것이 기억나시나요?
+
+* 이처럼 영향이 미비한 값들은 버리는 것이 점근적 시간표기입니다.
 
 * 예를 들어
 
-  * 시간복잡도가 3N^2 + 205N + 5235 인 알고리즘이 있다면 O(N^2) 이라고만 표기하면 됩니다.
+  * 시간복잡도가 3N^2 + 205N + 5235 인 알고리즘이 있다면 O(N^2) 이라고만 표기합니다.
 
-* 따라서 4장에서 계산해봤던 알고리즘들도 아래와 같이 표현하면 됩니다.
+* 다양한 예제가 아래에 있습니다.
 
   ![](images/8.jpg)
+
+  * 3번째 : N^2M 과 NM^2 중에 어느것이 더 빠를지 예측할 수 없기 때문에 둘 다 포함
+  * 4번째 : 이렇개 O(1) 로 표현되는 알고리즘을 상수시간(constant-time)알고리즘 이라고 부릅니다.
 
 * 이제 간단하게 알고리즘의 복잡도를 표현하고 비교할 수 있습니다.
 
 ### O 표기법의 의미
 
 * O 표기법이 어떤 알고리즘의 최악의 수행시간을 의미하지는 않습니다.
-* 예를 들어, 퀵정렬의 최악 수행시간은 O(N^2) 이지만, 평균 수행시간은 O(NlgN)이기 떄문입니다. 
+* 예를 들어, 퀵정렬의 최악 수행시간은 O(N^2) 이지만, 평균 수행시간은 O(NlgN) 이기 때문입니다. 
 
 ### 시간 복잡도 분석 연습
 
@@ -467,35 +474,40 @@
   }
   ```
 
-  * 각각의 수행속도
-    * 선택정렬 : for문이 2개이니 간단하게 O(N^2)이라고 생각해도 됩니다.
-    * 산입정렬 : 
+* 각각의 수행속도
+  * selectionSort() : 입력데이터에 종류에 관계없이 시간복잡도가 같음
+  
+    ![](images/9-1.jpg)
+  
+  * insertionSort() : 입력데이터에 종류에 따라 시간복잡도가 변함
+  
+    ![](images/9-2.jpg)
 
 ## 4.6 수행 시간 어림짐작하기
 
 ### 주먹구구 법칙
 
-* 시간복잡도를 가지고 실제 코드의 수행시간을 어림짐작 할 수 있어야 합니다.
+* 시간복잡도를 가지고 코드의 실제 수행시간을 어림짐작 할 수 있어야 합니다.
 * 프로그래밍 대회 참가자들이 사용하는 주먹구구 법칙
   * 시간복잡도를 구함
   * 입력크기를 대입해서 수행횟수를 구함
   * 1초당 반복문 수행 횟수가 1억(10^8)을 넘어가면 시간제한을 초과할 가능성 있음
-* 예제 : 입력데이터(N) 의 개수 = 10,000
+* 예제 : 입력데이터 개수 = N = 10,000
   * O(N^3) = 1억을 훨씬 넘을것임
   * O(NlgN) = 1억이 훨씬 안될것임
   * O(N^2) = 10,000 x 10,000 = 딱 1억 
-* 위 예제에서 마지막 시간복잡도는 애매할 수 있습니다. 그러나 실패한다고 봐야합니다.
+* 예제의 마지막 시간복잡도는 좀 애매할 수 있습니다. 이런 경우에는 주어진 환경에 따라 결과가 달라질 수 있습니다. 따라서 실패한다고 가정하고 더 개선하는게 좋습니다.
 * 주먹구구 법칙을 적용할 때는 충분한 여유를 두기 바랍니다.
 
 ### 실제 적용해 보기
 
-* 예제 : 1차원 배열에서 연속된 부분 구간 중, 그 합이 최대인 구간찾기
+* 예제 : 1차원 배열에서 연속된 부분 구간 중, 그 합이 최대인 것 찾기
 
   * 만약, 배열이 [-7, 4, -3, 6, 3, -8, 3, 4] 라면 최대합 부분구간은 [4, -3, 6, 3] 입니다.
 
-* 아래는 동일한 문제에 대한 4가지 알고리즘을 통해서 시간복잡도를 비교합니다.
+* 4가지의 서로 다른 알고리즘을 통해서 시간복잡도를 분석해 보겠습니다.
 
-* 최초코드
+* 알고리즘 #1
 
   * 시간복잡도
     - 바깥의 for문 2개 : O(N^2)
@@ -518,7 +530,7 @@
   }
   ```
 
-* 1차 개선
+* 알고리즘 #2
 
   - 개선내용 : 이동평균에서 합을 구했던 방법을 응용해서 맨 안쪽 for문을 없앰
   - 시간복잡도 : O(N^2)
@@ -537,7 +549,7 @@
   }
   ```
 
-* 2차 개선
+* 알고리즘 #3
 
   - 개선내용 : 분할정복 기법 사용 (7장에서 확인)
   - 시간복잡도 : O(NlgN)
@@ -562,7 +574,7 @@
   }
   ```
 
-* 3차 개선
+* 알고리즘 #4
 
   * 개선내용 : 점화식 사용 (8장에서 확인)
   * 시간복잡도 : 
@@ -605,3 +617,5 @@
 * 이제 실제로 한 번 보겠습니다.
 
   ![](images/9.jpg)
+
+## 4.7 계산 복잡도 클래스 : P, NP, NP-완비
