--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -41,26 +41,18 @@
 
 ### 반복문이 지배한다
 
-* 예제 : 서울에서 부산까지 갈 때, 어느 쪽이 더 빠를까요?
-
+* 예제 : 서울에서 부산까지 갈 때, 어느 쪽이 더 빠를까요?  
   ![](images/1.jpg)
-
 * 누구나 자동차 A 를 선택할 것입니다. 왜 그럴까요?
-
   * 시동거는데 3분이라는 긴 시간이 걸리지만, 서울에서 부산까지 가는데 큰 영향을 주는 인자가 아닙니다.
   * 또한, 나머지 인자들도 선택에 큰 영향을 주지 않습니다.
   * 결국 영향을 주는 인자는 **최대 시속**입니다.
   * 이처럼 대세를 결정하는 인자를 지배한다(dominate)라고 표현합니다.
   * 이동거리가 아주 짧으면 자동차 B가 더 빠를 수 있지만, 이동거리가 조금만 길어져도 자동차 A가 훨씬 빠릅니다.
-
 * 그럼 알고리즘에서 대세를 결정하는 인자는 무엇일까요?
-
   * 바로 반복문입니다.
-
   * 자동차 예제의 이동거리는 곧 input data로 생각할 수 있습니다. input data가 크면 클수록 반복문이 대세를 결정합니다.
-
-  * 문제 1 : 아래 알고리즘의 수행시간은 얼마일까요?
-
+  * 문제 1 : 아래 알고리즘의 수행시간은 얼마일까요?  
     ```c++
     int majority1(const vector<int>& A) {
     	int N = A.size();
@@ -81,13 +73,9 @@
     	}
     }
     ```
-
-    * 정답 : N^2
-
+    * 정답 : N^2  
       ※ N 크기의 반복문이 2개 겹쳐져 있으므로 N x N 입니다.
-
-  * 문제 2 : 아래 알고리즘의 수행시간은 얼마일까요?
-
+  * 문제 2 : 아래 알고리즘의 수행시간은 얼마일까요?  
     ```c++
     int majority2(const vector<int>& A) {
     	int N = A.size();
@@ -105,9 +93,7 @@
         return majority;
     }
     ```
-
-    * 정답 : N
-
+    * 정답 : N  
       ※ 반복문 2개를 합쳐서 N + 100 이라고 생각할 수 있지만 N이 커질수록 100의 영향은 미비해지기 때문에 N이라고만 쓰게 됩니다.
 
 ## 4.2 선형 시간 알고리즘
@@ -115,15 +101,10 @@
 ### 다이어트 현황 파악: 이동 평균 계산하기
 
 * 이동평균은 시간에 따라 변화하는 값들을 관찰할 때 유용한 방법입니다.
-
 * M-이동평균 : 마지막 M개의 평균
-
-* 아래 그림은 글쓴이의 1년간 다이어트 기록입니다. 별표는 3-이동평균을 의미합니다.
-
+* 아래 그림은 글쓴이의 1년간 다이어트 기록입니다. 별표는 3-이동평균을 의미합니다.  
   ![](images/2.jpg)
-
-* M-이동평균 첫번째 구현
-
+* M-이동평균 첫번째 구현  
   ```c++
   vector<double> movingAverage1(const vector<double>& A, int M) {
   	vector<double> ret;
@@ -137,40 +118,23 @@
   	return ret;
   }
   ```
-
   * 알고리즘 수행속도 분석
-
     * 첫번째 for문 : N - (M-1) = N - M + 1회
-
-    * 두번째 for문 : M - 0 = M회
-
+    * 두번째 for문 : M - 0 = M회  
       ※ 최대값(?) - 초기값
-
     * 수행속도 : (N - M + 1) x M = NM - M^2 + M
-
-    * 따라서 다이어트 그래프의 3-이동평균을 구하는 반복문 수행횟수는 30입니다.
-
+    * 따라서 다이어트 그래프의 3-이동평균을 구하는 반복문 수행횟수는 30입니다.  
       ※ (12x3) - (3x3) + 3 = 30 (N=12, M=3)
-
 * 다만, 첫번째 구현은 그렇게 빠르지 않습니다.
-
   * 어떤 사람의 나이가 969세이고 (969 x 365 = 353,685일)
-
   * 매일매일 지난 100,000일의 이동평균을 알고 싶다면 어떻게 될까요? (한달이 아니라 하루의 변화임)
-
   * 첫번째 알고리즘으로는 253억 회를 수행해야 합니다. 이렇게 큰 데이터를 위해서는 개선이 필요합니다.
-
   * idea : 중복된 계산 없애기
     * 먼저 M-이동평균을 구하려면 데이터가 M개는 모여야 합니다.
-    
     * 다음으로 바로 전날 구한 이동평균 데이터의 합에서 첫번째 값을 빼고 오늘 값을 더하면 오늘 필요한 이동평균 데이터의 합이 됩니다.
-    
-    * 왠지 반복문의 중첩을 없앨 수 있을 것 같습니다...
-    
+    * 왠지 반복문의 중첩을 없앨 수 있을 것 같습니다.  
       ![](images/3.jpg)
-
 * M-이동평균 개선
-
   ```c++
   vector<double> movingAverage2(const vector<double>& A, int M) {
       vector<double> ret;
@@ -186,20 +150,13 @@
       return ret;
   }
   ```
-
   * 알고리즘 수행속도 분석
     * 첫번째 for문 : (M-1) - 0 = M - 1
-    
     * 두번째 for문 : N - (M-1) = N - M + 1
-    
     * 수행속도 : (M - 1) + (N - M + 1) = N
-    
-    * 개선된 알고리즘의 수행속도는 입력된 데이터의 크기와 동일합니다.
-    
+    * 개선된 알고리즘의 수행속도는 입력된 데이터의 크기와 동일합니다.  
       ![](images/3-2.jpg)
-  
 * 위의 개선안과 같이 입력의 크기와 속도가 동일한 알고리즘을 선형시간 (linear time) 알고리즘이라고 합니다.
-
 * 선형시간 알고리즘은 주어진 입력을 1번씩만 보면 되기 때문에 대부분의 경우에 좋은 알고리즘으로 판단할 수 있습니다.
 
 ## 4.3 선형시간보다 빠른 알고리즘
@@ -207,35 +164,21 @@
 ### 성형 전 사진 찾기
 
 * 그럼 선형시간 알고리즘 보다 더 빠른 알고리즘이 있을까요?
-
 * 예제
-
   * 아이돌 A군이 언제 성형했는지 궁금합니다.
-
   * A군의 사진 10만장을 시간순으로 정렬했습니다.
-
   * 해결방법
-
     * 가장 중간에 있는 5만번째 사진을 봅니다.
-
     * 성형을 했다면 결과가 나왔습니다.
-
     * 성형을 안했다면 이전에 찍은 사진 5만장은 볼 필요가 없습니다.
-
     * 이렇게 중간시점의 사진을 보는 방법을 반복합니다.
-
-    * 그러면 17번 안에 성형여부를 확인할 수 있게 됩니다.
-
+    * 그러면 17번 안에 성형여부를 확인할 수 있게 됩니다.  
       ![](images/4.jpg)
-
 * 위의 예제는 입력의 크기인 10만장을 다 보지도 않고 답을 구했습니다.
-
 * 이것을 이전처럼 수학적으로 표현하면 어떻게 될까요?
-
   * 확인해야 할 데이터가 1/2씩 줄어들기 때문에 밑이 2인 로그를 사용하게 됩니다.
   * 밑이 2인 로그를 특별히 lg 라고 표현합니다.
   * 결국, 위 예제의 수행속도는 lgN 가 됩니다.
-
 * 이렇게 선형시간보다 빠른 알고리즘을 선형 이하 시간(sublinear) 알고리즘이라고 부릅니다.
 
 ### 이진탐색
@@ -269,27 +212,18 @@
 ### 알러지가 심한 친구들
 
 * 예제
-
   * N명의 친구는 저마다 알러지 때문에 못 먹는 음식이 있습니다.
-
-  * 관련 정보가 아래와 같을 때, 누구라도 하나의 음식은 먹을 수 있게 하려면 최소 몇 가지의 음식이 필요할까요?
-
+  * 관련 정보가 아래와 같을 때, 누구라도 하나의 음식은 먹을 수 있게 하려면 최소 몇 가지의 음식이 필요할까요?  
     ![](images/5.jpg)
 
 ### 모든 답 후보를 평가하기
 
 * idea
-
-  * 음식 6개를 조합할 수 있는 경우의 수를 다 추출하기 : 2^6 = 64가지
-
+  * 음식 6개를 조합할 수 있는 경우의 수를 다 추출하기 : 2^6 = 64가지  
     ※ 각각의 음식은 "포함 된다" vs "안 된다" 라는 2가지 상태를 가짐
-
   *  추출된 각각의 경우에 대해 원하는 조건을 만족하는지 검사
-
 * 6장에서 자세히 다루지만, 이렇게 모든 경우의 수를 탐색하는 가장 쉬운 방법은 재귀함수를 이용하는 것입니다.
-
 * 코드는 아래와 같습니다.
-
   ```c++
   const int INF = 987654321;
   // 이 메뉴로 모두가 식사할 수 있는지 여부를 반환한다.
@@ -313,15 +247,10 @@
       return ret;
   }
   ```
-
   * 코드해석
-
     * 재귀함수를 통해 음식조합으로 가능한 모든 경우를 구함
-
     * 재귀함수가 기저사례가지 도달하면(위 트리의 리프노드) 모든 친구들의 알러지를 피해갈 수 있는지 확인
-
-    * 확인결과 성공이면 포함된 메뉴의 개수를 저장 (더 적은 값으로)
-    
+    * 확인결과 성공이면 포함된 메뉴의 개수를 저장 (더 적은 값으로)  
       ![](images/6.jpg)
 
 #### 지수 시간 알고리즘
@@ -339,11 +268,8 @@
 ### 소인수 분해의 수행 시간
 
 * 지금까지는 입력 데이터의 개수에 따라 수행속도가 달라졌습니다. (입력 데이터가 많으면 느리고 적으면 빠르고)
-
 * 그러나 항상 그런것은 아닙니다.
-
 * 예제 : 소인수분해 코드
-
   ```c++
   vector<int> factor(int n) {
       if(n == 1) return vector<int>(1, 1);
@@ -356,91 +282,59 @@
       return ret;
   }
   ```
-
   * 위 코드의 내용보다도 입력값 보겠습니다.
-
   * 입력의 개수는 하나인데도 그 값의 크기에 따라서 수행속도가 달라집니다.
-
-    * 지금까지는 입력의 개수에 따라 수행속도를 계산해왔기 때문에 이 부분이 약간 혼란이 올 수도 있습니다.
-
+    * 지금까지는 입력의 개수에 따라 수행속도를 계산해왔기 때문에 이 부분이 약간 혼란이 올 수도 있습니다.  
       (표현방법이 애매할 수 있다는 뜻)
-
-    * 쉽게 생각하면, int n 에 저장된 값에 따라 비트정보가 달라질테니 이것도 역시 입력의 크기에 따라 수행속도가 달라진다고 생각하면 편합니다.
-
+    * 쉽게 생각하면, int n 에 저장된 값에 따라 비트정보가 달라질테니 이것도 역시 입력의 크기에 따라 수행속도가 달라진다고 생각하면 편합니다.  
       ※ 같은 int n 안에서도 0000 , 0001 과 같이 비트단위로 데이터 크기가 달라지므로
-  
   * 결론적으로 이런 코드에 대해서는 **입력의 크기에 대한 지수시간 알고리즘이다**라고 말하면 됩니다.
 
 ## 4.5 시간 복잡도
 
 * 알고리즘의 수행시간을 측정하는 기준을 시간 복잡도(time complexity)라고 부릅니다.
-
 * 시간복잡도는 사칙연산, 대입문 등의 언어에서 제공하는 기본적인 연산 한줄의 개수를 통해 계산합니다.
-
 * **A의 시간복잡도가 B보다 높다** == A알고리즘이 더 느리다
-
   * 한 가지 주의할 점은
-
   * 입력데이터의 양이 적으면 시간복잡도가 높은 알고리즘의 수행속도가 더 빠를수도 있다는 점입니다.
-
   * 예제 : 두 알고리즘 A, B의 시간복잡도가 아래와 같다고 해봅시다.
-
     * 알고리즘 A : 10240 + (35 x lgN)
-
     * 알고리즘 B : 2N^2
-
     * 우리는 lgN 이 N 보다 빠르다는 것을 이미 배웠습니다. 
-
-    * 그러나 아래 그래프와 같이 N 의 값이 충분히 작다면 알고리즘 B가 더 빠를 수 있습니다.
-  
+    * 그러나 아래 그래프와 같이 N 의 값이 충분히 작다면 알고리즘 B가 더 빠를 수 있습니다.  
       ![](images/7.jpg)
 
 ### 입력의 종류에 따른 수행 시간의 변화
 
 * 아쉽게도 입력의 크기가 수행 시간을 결정하는 유일한 척도는 아닙니다.
-
 * 예제 : 아래 코드는 array에서 element를 찾는 코드입니다.
-
   ```c++
-int firstIndex(const vector<int>& array, int element) {
+  int firstIndex(const vector<int>& array, int element) {
   	for(int i = 0; i < array.size(); ++i)
 		if(array[i] == element)
   			return i;
   	return -1;
   } 
   ```
-  
 * 그런데 element의 위치에 따라서 매번 수행시간이 달라질 것입니다.
-
 * 이런 경우에는 **최선**, **최악**, **평균** 수행시간을 모두 구하는 것입니다.
-
   * 최선 : 1번 - element가 arrray의 맨 앞에 있을 때
   * 최악 : N번 - element가 array의 맨 뒤에 있을 때
   * 평균 : N/2번
-
-* 그리고 일반적으로 최악의 수행시간을 많이 사용하지만, 예외의 경우도 있을 수 있습니다.
-
+* 그리고 일반적으로 최악의 수행시간을 많이 사용하지만, 예외의 경우도 있을 수 있습니다.  
   ※ 예 : 퀵정렬
 
 ### 점근적 시간 표기: O (빅오) 표기
 
 * 시간복잡도는 기본연산을 모두 계산해야 하기 때문에 빠르게 계산하기 어려울 때가 많습니다.
-
 * 위의 예제들에서 대세에 영향을 주는 반복문만 고려했던 것이 기억나시나요?
-
 * 이처럼 영향이 미비한 값들은 버리는 것이 점근적 시간표기입니다.
-
 * 예를 들어
-
   * 시간복잡도가 3N^2 + 205N + 5235 인 알고리즘이 있다면 O(N^2) 이라고만 표기합니다.
-
-* 다양한 예제가 아래에 있습니다.
-
+* 다양한 예제가 아래에 있습니다.  
   ![](images/8.jpg)
-
   * 3번째 : N^2M 과 NM^2 중에 어느것이 더 빠를지 예측할 수 없기 때문에 둘 다 포함
   * 4번째 : 이렇개 O(1) 로 표현되는 알고리즘을 상수시간(constant-time)알고리즘 이라고 부릅니다.
-
 * 이제 간단하게 알고리즘의 복잡도를 표현하고 비교할 수 있습니다.
 
 ### O 표기법의 의미
@@ -450,8 +344,7 @@ int firstIndex(const vector<int>& array, int element) {
 
 ### 시간 복잡도 분석 연습
 
-* 선택정렬 (selenction sort) 과 삽입 정렬 (insertion sort)
-
+* 선택정렬 (selenction sort)
   ```c++
   void selectionSort(vector<int>& A) {
   	for(int i = 0; i < A.size(); ++i) {
@@ -462,7 +355,11 @@ int firstIndex(const vector<int>& array, int element) {
   		swap(A[i], A[minINdex]);
   	}
   }
-  
+  ```
+  * selectionSort() : 입력데이터에 종류에 관계없이 시간복잡도가 같음  
+    ![](images/9-1.jpg)
+* 삽입 정렬 (insertion sort)
+  ```c++
   void insertionSort(vector<int>& A) {
       for(int i = 0; i < A.size(); ++i) {
           int j = i;
@@ -473,14 +370,7 @@ int firstIndex(const vector<int>& array, int element) {
       }
   }
   ```
-
-* 각각의 수행속도
-  * selectionSort() : 입력데이터에 종류에 관계없이 시간복잡도가 같음
-  
-    ![](images/9-1.jpg)
-  
-  * insertionSort() : 입력데이터에 종류에 따라 시간복잡도가 변함
-  
+  * insertionSort() : 입력데이터에 종류에 따라 시간복잡도가 변함  
     ![](images/9-2.jpg)
 
 ## 4.6 수행 시간 어림짐작하기
@@ -502,18 +392,13 @@ int firstIndex(const vector<int>& array, int element) {
 ### 실제 적용해 보기
 
 * 예제 : 1차원 배열에서 연속된 부분 구간 중, 그 합이 최대인 것 찾기
-
   * 만약, 배열이 [-7, 4, -3, 6, 3, -8, 3, 4] 라면 최대합 부분구간은 [4, -3, 6, 3] 입니다.
-
 * 4가지의 서로 다른 알고리즘을 통해서 시간복잡도를 분석해 보겠습니다.
-
 * 알고리즘 #1
-
   * 시간복잡도
     - 바깥의 for문 2개 : O(N^2)
     - 제일 안쪽 for문 : O(N)
     - 최종 시간복잡도 : O(N^3)
-
   ```c++
   const int MIN = numeric_limits<int>::min();
   
@@ -529,12 +414,9 @@ int firstIndex(const vector<int>& array, int element) {
   	return ret;
   }
   ```
-
 * 알고리즘 #2
-
   - 개선내용 : 이동평균에서 합을 구했던 방법을 응용해서 맨 안쪽 for문을 없앰
   - 시간복잡도 : O(N^2)
-
   ```c++
   int betterMaxSum(const vector<int>& A) {
   	int N = A.size(), ret = MIN;
@@ -548,12 +430,9 @@ int firstIndex(const vector<int>& array, int element) {
   	return ret;
   }
   ```
-
 * 알고리즘 #3
-
   - 개선내용 : 분할정복 기법 사용 (7장에서 확인)
   - 시간복잡도 : O(NlgN)
-
   ```c++
   int fastMaxSum(const vector<int>& A, int lo, int hi) {
   	if(lo == hi) return A[lo];
@@ -573,12 +452,9 @@ int firstIndex(const vector<int>& array, int element) {
   	return max(left + right, single);
   }
   ```
-
 * 알고리즘 #4
-
   * 개선내용 : 점화식 사용 (8장에서 확인)
   * 시간복잡도 : 
-
   ```c++
   int fasestMaxSum(const vector<int>& A) {
   	int N = A.size(), ret = MIN, psum = 0;
@@ -589,33 +465,22 @@ int firstIndex(const vector<int>& array, int element) {
   	return ret;
   }
   ```
-
 * 이렇게 동일한 문제에 대해서 시간복잡도가 서로 다른 4개의 알고리즘을 구현했습니다.
-
   * O(N^3)
   * O(N^2)
   * O(NlogN)
   * O(N)
 
 * 만약, 주어진 조건이 아래와 같다면, 어떤 방법을 사용해야 할까요?
-
   * 시간 제한 : 1초
   * N : 1,000 or 10,000 or 100,000
-
 * N = 1,000 일 떄
-
   * (N^3)은 10억으로 크지만, 반복문의 내부가 단순하므로 될 수도 있음, 나머지는 무난함
-
 * N = 10,000 일 때
-
   * (N^3)은 1조를 넘어가므로 실패, (N^2)가 1억이기 때문제 주의가 필요하지만, 역시 반복문 내부가 단순하므로 될 수도 있음
-
 * N = 100,000 일 때
-
   * (N^2)도 100억입니다. 실패할 확률이 큽니다. (NlgN)은 2천만 정도이기 떄문에 무난함
-
-* 이제 실제로 한 번 보겠습니다.
-
+* 이제 실제로 한 번 보겠습니다.  
   ![](images/9.jpg)
 
 ## 4.7 계산 복잡도 클래스 : P, NP, NP-완비
