--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -356,7 +356,7 @@
   	}
   }
   ```
-  * selectionSort() : 입력데이터에 종류에 관계없이 시간복잡도가 같음  
+  * 시간복잡도 분석 : 입력데이터에 종류에 관계없이 시간복잡도가 같음  
     ![](images/9-1.jpg)
 * 삽입 정렬 (insertion sort)
   ```c++
@@ -370,7 +370,7 @@
       }
   }
   ```
-  * insertionSort() : 입력데이터에 종류에 따라 시간복잡도가 변함  
+  * 시간복잡도 분석 : 입력데이터에 종류에 따라 시간복잡도가 변함  
     ![](images/9-2.jpg)
 
 ## 4.6 수행 시간 어림짐작하기
