--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -293,7 +293,7 @@
 ## 4.5 시간 복잡도
 
 * 알고리즘의 수행시간을 측정하는 기준을 시간 복잡도(time complexity)라고 부릅니다.
-* 시간복잡도는 사칙연산, 대입문 등의 언어에서 제공하는 기본적인 연산 한줄의 개수를 통해 계산합니다.
+* 시간복잡도는 사칙연산, 대입문 등 언어에서 제공하는 기본적인 연산 한줄한줄의 개수를 통해 계산합니다.
 * **A의 시간복잡도가 B보다 높다** == A알고리즘이 더 느리다
   * 한 가지 주의할 점은
   * 입력데이터의 양이 적으면 시간복잡도가 높은 알고리즘의 수행속도가 더 빠를수도 있다는 점입니다.
@@ -392,13 +392,18 @@
 ### 실제 적용해 보기
 
 * 예제 : 1차원 배열에서 연속된 부분 구간 중, 그 합이 최대인 것 찾기
+  
   * 만약, 배열이 [-7, 4, -3, 6, 3, -8, 3, 4] 라면 최대합 부분구간은 [4, -3, 6, 3] 입니다.
+  
 * 4가지의 서로 다른 알고리즘을 통해서 시간복잡도를 분석해 보겠습니다.
+
 * 알고리즘 #1
-  * 시간복잡도
+  * 시간복잡도 : O(N^3)
     - 바깥의 for문 2개 : O(N^2)
-    - 제일 안쪽 for문 : O(N)
-    - 최종 시간복잡도 : O(N^3)
+    
+    - 제일 안쪽 for문 : N/2 = O(N)  
+    
+      ※ 1번 + 2번 + 3번 + 4번 +  ... + N-2번 + N-1번 = N/2
   ```c++
   const int MIN = numeric_limits<int>::min();
   
@@ -414,6 +419,7 @@
   	return ret;
   }
   ```
+  
 * 알고리즘 #2
   - 개선내용 : 이동평균에서 합을 구했던 방법을 응용해서 맨 안쪽 for문을 없앰
   - 시간복잡도 : O(N^2)
@@ -430,8 +436,9 @@
   	return ret;
   }
   ```
+  
 * 알고리즘 #3
-  - 개선내용 : 분할정복 기법 사용 (7장에서 확인)
+  - 개선내용 : 분할정복 기법 사용 (7장 분할정복에서 확인)
   - 시간복잡도 : O(NlgN)
   ```c++
   int fastMaxSum(const vector<int>& A, int lo, int hi) {
@@ -452,9 +459,10 @@
   	return max(left + right, single);
   }
   ```
+  
 * 알고리즘 #4
-  * 개선내용 : 점화식 사용 (8장에서 확인)
-  * 시간복잡도 : 
+  * 개선내용 : 점화식 사용 (8장 동적계획법에서 확인)
+  * 시간복잡도 : O(N)
   ```c++
   int fasestMaxSum(const vector<int>& A) {
   	int N = A.size(), ret = MIN, psum = 0;
@@ -465,22 +473,92 @@
   	return ret;
   }
   ```
-* 이렇게 동일한 문제에 대해서 시간복잡도가 서로 다른 4개의 알고리즘을 구현했습니다.
+  
+* 이렇게 시간복잡도가 서로 다른 4개의 알고리즘을 구현했습니다.
   * O(N^3)
   * O(N^2)
   * O(NlogN)
   * O(N)
 
-* 만약, 주어진 조건이 아래와 같다면, 어떤 방법을 사용해야 할까요?
-  * 시간 제한 : 1초
-  * N : 1,000 or 10,000 or 100,000
-* N = 1,000 일 떄
-  * (N^3)은 10억으로 크지만, 반복문의 내부가 단순하므로 될 수도 있음, 나머지는 무난함
-* N = 10,000 일 때
-  * (N^3)은 1조를 넘어가므로 실패, (N^2)가 1억이기 때문제 주의가 필요하지만, 역시 반복문 내부가 단순하므로 될 수도 있음
-* N = 100,000 일 때
-  * (N^2)도 100억입니다. 실패할 확률이 큽니다. (NlgN)은 2천만 정도이기 떄문에 무난함
-* 이제 실제로 한 번 보겠습니다.  
-  ![](images/9.jpg)
+* 만약, 문제와 함께 주어진 시간제한이 1초라면 4개의 알고리즘 중 어떤 것이 성공할까요?
+  
+  ※ 시간제한이 1초면 주먹구구 법칙으로 1억이 기준선
+  
+  * N = 1,000 일 떄
+    * O(N^3) = 10억 : 주먹구구 법칙으로 실패할 확률이 크지만 반복문 내부가 단순하므로 될 수도 있음
+    * O(N^2), O(NlogN), O(N)  : 무난하게 성공
+  * N = 10,000 일 때
+    * O(N^3) = 1조 : 무조건 실패
+    * O(N^2) = 1억 : 주먹구구 법칙으로 보면 성공이나 실패를 예측 어려움, 반복문 내부가 단순하므로 될 수도 있음
+    * O(NlogN) O(N) : 무난하게 성공
+  * N = 100,000 일 때
+    * O(N^3) = 무조건 실패
+    * O(N^2) = 100억 : 실패할 확률이 큼
+    * O(NlgN) = 2천만 : 성공할 확률이 큼
+    * O(N) : 무난하게 성공
+  
+* 이렇듯 어떤 문제에 대한 알고리즘을 구현한 후에 주먹구구 법칙을 통해 성공이나 실패를 가늠해 볼 수 있습니다.
+
+* 만약, 주어진 조건에서 실패할 확률이 크다면 좀 더 개선하는 작업이 필요하게 됩니다.
+
+* 이제 실제 측정치를 확인해 보겠습니다.  
+  
+  ※ 입력데이터가 커질수록 복잡도가 높은 알고리즘은 급격히 느려집니다.
+  ![](images/10.jpg)
 
 ## 4.7 계산 복잡도 클래스 : P, NP, NP-완비
+
+* 계산 복잡도 이론 : 어떤 문제를 풀기위한 알고리즘을 분류하고 그 특성을 연구하는 학문
+
+### 문제의 특성
+
+* 계산 복잡도 이론에서 쉬운 문제란?
+  * 문제의 난이도에 상관없이 빠른 알고리즘이 있다고 증명되면 쉬운 문제입니다.
+* 계산 복잡도 이론에서 빠르다의 의미?
+  * 다항 시간 알고리즘이 존재하는 문제를 의미합니다.
+  * 이들을 **P**문제(polynomial)라고 부릅니다.
+  * 삽입정렬, 선택정렬 등이 P문제에 속합니다.
+  * 이렇게 분류된 문제들은 P문제 계산 복잡도 클래스(complexity class)에 속했다고 합니다.
+
+### 난이도의 함정
+
+* NP문제(non-deterministic polynomial)도 있습니다. 
+
+* 재밌는 점은 NP문제라고 P문제의 반대를 의미하지 않습니다.
+
+* 아직 다항 시간 알고리즘을 못 찾은 문제들일뿐... 다항 시간 알고리즘이 없다고도 증명되지 않았습니다.
+
+  ※ 수학계 7대 난제
+
+* 없음을 증명하기가 더 어렵다고 합니다.
+
+  ※ 예를 들어, UFO가 존재함을 증명하려면 UFO를 하나만 찾으면 되지만, 존재하지 않음을 증명하려면 우주를 다 확인해야 증명이 됩니다.
+
+### NP문제, NP-hard 문제
+
+* NP문제  
+  * 다항시간 알고리즘은 모르지만, 정답인지를 확인하는 다항 시간 알고리즘은 존재하는 집합입니다.
+  * 지수시간 알고리즘만 존재하지만 상황에 따라 다항시간에 완료되기도 합니다.
+* P == NP ?  
+  * 수학계 7대 난제
+  * NP문제가 P문제라고 밝혀지면 세상에 존재하는 많은 문제를 빠르게 풀 수 있게 됩니다.
+
+* 환산(reduction) 기법
+
+  * A문제의 풀이 방법을 B문제의 풀이방법으로 변환하는 것입니다.
+  * 쉬운 예) 곱셈는 더하기의 반복으로 풀 수 있습니다.
+
+* NP-complete 문제
+
+  * 모든 NP문제를 환산하는데 쓰일 수 있는 문제들의 집합입니다.
+
+  * NP-complete 문제가 중요한 이유?
+
+    : NP-complete 중 하나라도 다항 시간 알고리즘을 찾으면 모든 NP문제가 P문제라는 것이 증명됩니다.
+
+* NP-hard 문제
+
+  * 다른 모든 NP문제보다 어려운 문제의 집합입니다.
+  * 그 기준은 SAT라는 문제입니다. 이것을 풀 수 있다면 다른 모든 NP문제도 풀 수 있음을 의미합니다.
+  * 속도비교는 어떻게?
+    * A라는 문제의 현존하는 최대로 빠른 알고리즘을 B문제를 풀기위한 알고리즘으로 환원해서 비교함
