--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -498,12 +498,9 @@
     * O(N) : 무난하게 성공
   
 * 이렇듯 어떤 문제에 대한 알고리즘을 구현한 후에 주먹구구 법칙을 통해 성공이나 실패를 가늠해 볼 수 있습니다.
-
 * 만약, 주어진 조건에서 실패할 확률이 크다면 좀 더 개선하는 작업이 필요하게 됩니다.
-
 * 이제 실제 측정치를 확인해 보겠습니다.  
-  
-  ※ 입력데이터가 커질수록 복잡도가 높은 알고리즘은 급격히 느려집니다.
+  ※ 입력데이터가 커질수록 복잡도가 높은 알고리즘은 급격히 느려집니다.  
   ![](images/10.jpg)
 
 ## 4.7 계산 복잡도 클래스 : P, NP, NP-완비
@@ -523,15 +520,9 @@
 ### 난이도의 함정
 
 * NP문제(non-deterministic polynomial)도 있습니다. 
-
 * 재밌는 점은 NP문제라고 P문제의 반대를 의미하지 않습니다.
-
 * 아직 다항 시간 알고리즘을 못 찾은 문제들일뿐... 다항 시간 알고리즘이 없다고도 증명되지 않았습니다.
-
-  ※ 수학계 7대 난제
-
-* 없음을 증명하기가 더 어렵다고 합니다.
-
+* 없음을 증명하기가 더 어렵다고 합니다.  
   ※ 예를 들어, UFO가 존재함을 증명하려면 UFO를 하나만 찾으면 되지만, 존재하지 않음을 증명하려면 우주를 다 확인해야 증명이 됩니다.
 
 ### NP문제, NP-hard 문제
@@ -542,23 +533,18 @@
 * P == NP ?  
   * 수학계 7대 난제
   * NP문제가 P문제라고 밝혀지면 세상에 존재하는 많은 문제를 빠르게 풀 수 있게 됩니다.
-
 * 환산(reduction) 기법
-
   * A문제의 풀이 방법을 B문제의 풀이방법으로 변환하는 것입니다.
   * 쉬운 예) 곱셈는 더하기의 반복으로 풀 수 있습니다.
-
 * NP-complete 문제
-
   * 모든 NP문제를 환산하는데 쓰일 수 있는 문제들의 집합입니다.
-
-  * NP-complete 문제가 중요한 이유?
-
+  * NP-complete 문제가 중요한 이유?  
     : NP-complete 중 하나라도 다항 시간 알고리즘을 찾으면 모든 NP문제가 P문제라는 것이 증명됩니다.
-
+  * Stephen Cook 교수 (University of Toronto, Department of Computer Science and Department)
+    ![](images/11.jpg)
 * NP-hard 문제
-
   * 다른 모든 NP문제보다 어려운 문제의 집합입니다.
   * 그 기준은 SAT라는 문제입니다. 이것을 풀 수 있다면 다른 모든 NP문제도 풀 수 있음을 의미합니다.
   * 속도비교는 어떻게?
-    * A라는 문제의 현존하는 최대로 빠른 알고리즘을 B문제를 풀기위한 알고리즘으로 환원해서 비교함
+    * A라는 문제의 현존하는 최대로 빠른 알고리즘을 B문제를 풀기위한 알고리즘으로 환원해서 비교함  
+  ![](images/12.jpg)
