--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -533,18 +533,15 @@
 * P == NP ?  
   * 수학계 7대 난제
   * NP문제가 P문제라고 밝혀지면 세상에 존재하는 많은 문제를 빠르게 풀 수 있게 됩니다.
-* 환산(reduction) 기법
-  * A문제의 풀이 방법을 B문제의 풀이방법으로 변환하는 것입니다.
-  * 쉬운 예) 곱셈는 더하기의 반복으로 풀 수 있습니다.
+* 환산(reduction)기법
+  * A문제의 풀이 방법을 B문제의 풀이방법으로 바꾸는 것입니다.  
+    예) 덧셈을 곱셉으로 바꿔서 계산할 수 있습니다.
+  * 이 때, 덧셈은 곱셈으로 환산가능(reducible)하다고 표현합니다
+* NP-hard 문제
+  * 모든 NP문제들이 A라는 문제로 환산가능(reducible)하다면, 문제 A는 NP-hard에 속하게 됩니다.
+  * 즉, 모든 NP문제보다 어려습니다.
 * NP-complete 문제
-  * 모든 NP문제를 환산하는데 쓰일 수 있는 문제들의 집합입니다.
+  * NP-hard이면서 NP인 문제입니다.
   * NP-complete 문제가 중요한 이유?  
     : NP-complete 중 하나라도 다항 시간 알고리즘을 찾으면 모든 NP문제가 P문제라는 것이 증명됩니다.
-  * Stephen Cook 교수 (University of Toronto, Department of Computer Science and Department)
-    ![](images/11.jpg)
-* NP-hard 문제
-  * 다른 모든 NP문제보다 어려운 문제의 집합입니다.
-  * 그 기준은 SAT라는 문제입니다. 이것을 풀 수 있다면 다른 모든 NP문제도 풀 수 있음을 의미합니다.
-  * 속도비교는 어떻게?
-    * A라는 문제의 현존하는 최대로 빠른 알고리즘을 B문제를 풀기위한 알고리즘으로 환원해서 비교함  
-  ![](images/12.jpg)
+    ![](images/12.jpg)
