--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -543,5 +543,5 @@
 * NP-complete 문제
   * NP-hard이면서 NP인 문제입니다.
   * NP-complete 문제가 중요한 이유?  
-    : NP-complete 중 하나라도 다항 시간 알고리즘을 찾으면 모든 NP문제가 P문제라는 것이 증명됩니다 : 7대 난제 해결
+    : NP-complete 중 하나라도 다항시간 알고리즘을 찾으면 모든 NP문제가 P문제라는 것이 증명됩니다
     ![](images/12.jpg)
