--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -433,17 +433,23 @@
   ```
   
 * 알고리즘 #3
-  - 개선내용 : 분할정복 기법 사용 (7장 분할정복에서 확인)
-  - 시간복잡도 : O(NlgN)
+  - 개선내용 : 분할정복 + 탐욕법 사용 (각 7장, 10장)
   ```c++
+  // A[lo..hi]의 연속된 부분 구간의 최대 합을 구한다. 시간 복잡도: O(nlgn)
   int fastMaxSum(const vector<int>& A, int lo, int hi) {
+  	// 기저사례: 구간의 길이가 1인 경우
   	if(lo == hi) return A[lo];
+  	// 배열을 A[lo..mid], A[mid+1..hi]의 두 조각으로 나눈다.
   	int mid = (lo + hi) / 2;
+  	// 두 부분에 걸쳐 있는 최대 합 구간을 찾는다. 이 구간은
+  	// A[i..mid]와 A[mid+1..j] 형태를 갖는 구간의 합으로 이루어진다.
+  	// A[i..mid] 구간의 합을 구한다.
   	int left = MIN, right = MIN, sum = 0;
   	for(int i = mid; i >= lo; --i) {
   		sum += A[i];
   		left = max(left, sum);
   	}
+  	// A[mid+1..j] 구간의 합을 구한다.
   	sum = 0;
   	for(int j = mid+1; j <= hi; ++j) {
   		sum += A[j];
@@ -454,9 +460,16 @@
   	return max(left + right, single);
   }
   ```
-  
+  - 시간복잡도 : O(NlgN)  
+    ![](images/9-9.jpg)
+
 * 알고리즘 #4
-  * 개선내용 : 점화식 사용 (8장 동적계획법에서 확인)
+  * 개선내용 : 점화식 사용 (8장 동적계획법)
+  * maxAt(i) = max(0, maxAt(i-1)) + A[i]
+    * A[i]이 최대값의 맨 마지막 값이라면
+    * A[i]는 혼자이거나 바로 앞의 A[i-1]과 함께임
+    * 이 때, A[i-1]은 또 다른 최대값의 맨 마지막값이라고 볼 수 있기 때문에
+    * 두 번째 최대값의 맨 마지막에 A[i]을 붙였다고 할 수 있음
   * 시간복잡도 : O(N)
   ```c++
   int fasestMaxSum(const vector<int>& A) {
