--- a/doc/ch4-5/ch4-5.md
+++ b/doc/ch4-5/ch4-5.md
@@ -461,6 +461,8 @@
   }
   ```
   - 시간복잡도 : O(NlgN)  
+  - 아래 그림 root node의 left, right는 각각 0, 2 가 아니라 7, 3 으로 수정되어야 합니다. (정지완님 해결!)
+  - 그 이유는 left = max(left, sum); / right = max(right, sum) 코드를 보면 값을 하나하나 더해가면서 max를 찾고 있기 때문입니다.
     ![](images/9-9.jpg)
 
 * 알고리즘 #4
