--- a/doc/ch1-3/ch1-3.md
+++ b/doc/ch1-3/ch1-3.md
@@ -448,7 +448,7 @@
      - [2, 10] : 2~10
    - C++을 포함하는 대부분의 프로그래밍 언어는 half-open interval 을 사용함을 기억합시다.
      - [2, 10) : 2~9
-   - C++ STL의 iterato에서 이와 같은 방법을 사용함을 기억합시다.
+   - C++ STL의 iterator에서 이와 같은 방법을 사용함을 기억합시다.
      - list.begin() : 시작원소
      - list.end() : null 이다, list.end()-1 을 사용해야 null에 접근하지 않습니다.
    - 이러한 법칙에 일관성이 없으면 어떤 함수를 호출할때 전달하는 값의 범위와 함수내부에서 사용하는 범위가 달라질 수 있기 때문에 일관성을 가져야 합니다.
