--- a/doc/ch8/ch8-2.md
+++ b/doc/ch8/ch8-2.md
@@ -159,7 +159,10 @@
     O(nk) 시간 해법
 
     O(nlogn) 시간 해법
-
+    
+    부연설명 (발표 중, 칠판필기 내용)  
+    
+      ![](images/LIS최적화-부연설명.jpg)
     
 
 - 최적화 문제 동적 계획법 레시피
@@ -224,3 +227,6 @@
 
     주의: 최종 결과 값에서 -2를 해줘야 한다.
 
+  - 부연설명 (발표 중, 칠판필기 내용)  
+    
+    ![](images/JLIS-부연설명.jpg)
